tests/js/error/semantics/builtin_array_toLocale1.js
var __result1;

try { [1,2,{toLocaleString:10}].toLocaleString(); } catch(e) { __result1 = e; }
var __expect1 = __TypeErrLoc;


